--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-localization": "^12.0.0",
     "expo-status-bar": "~1.2.0",
+    "i18n-js": "^3.8.0",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localization": "^2.1.7",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
